# dailyfocus-copilot

./: .env.example  LICENSE  README.md  folder_structure.txt  pyproject.toml
api/app/: config.py  main.py
